# vercel-capstone-test

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  compose.yaml  hello.py  pyproject.toml
.github/workflows/: contribute.yml  deploy.yml  lint-test.yaml  spelling.yml
backend/: Dockerfile  deck.py  dependencies.py  hello.py  lobby.py  models.py  player.py  requirements.txt  vercel.json
backend/tests/: test_example.py  test_models.py
documentation/: docusaurus.config.js  package.json
documentation/docs/requirements/: _category_.json  features-and-requirements.md  general-requirements.md  system-block-diagram.md  system-overview.md  use-case-descriptions.md
documentation/docs/system-architecture/: case-diagram.md  component-overview.md  development-environment.md  figma-prototype.md  figmaprototype.md  use-case-sequences.md  version-control.md
documentation/docs/testing/: unit-testing.md
documentation/static/htmlcov/: class_index.html  function_index.html  index.html  status.json  z_9b5d3c41184f4a9e___init___py.html  z_9b5d3c41184f4a9e_test_example_py.html  z_9b5d3c41184f4a9e_test_models_py.html  z_e17dcb4e28158375___init___py.html  z_e17dcb4e28158375_models_py.html
documentation/static/img/: usecaseumlcode.txt
frontend/: package-lock.json  package.json
frontend/src/: App.js  App.test.js
frontend/src/components/: AACBoard.js
