[project]
name = "gofish"
version = "0.1.0"
description = "Multiplayer Go Fish with AAC support."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.8",
]

[dependency-groups]
dev = [
    "coverage>=7.6.12",
    "pre-commit>=4.1.0",
    "pytest>=8.3.4",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
  "ANN",
  "B",
  "C4",
  "D",
  "DTZ",
  "E",
  "F",
  "I",
  "ISC",
  "INT",
  "N",
  "PGH",
  "PIE",
  "Q",
  "RET",
  "RSE",
  "RUF",
  "S",
  "SIM",
  "T20",
  "TID",
  "UP",
  "W",
]
ignore = [
  "ANN002",
  "ANN003",
  "ANN101",
  "ANN102",
  "ANN204",
  "ANN206",
  "ANN401",
  "B904",
  "C401",
  "C408",
  "D100",
  "D104",
  "D105",
  "D107",
  "D203",
  "D212",
  "D214",
  "D215",
  "D301",
  "D400",
  "D401",
  "D402",
  "D404",
  "D405",
  "D406",
  "D407",
  "D408",
  "D409",
  "D410",
  "D411",
  "D412",
  "D413",
  "D414",
  "D416",
  "D417",
  "E731",
  "RET504",
  "RUF005",
  "RUF012",
  "RUF015",
  "S101",   # I know how to use asserts
  "S311",
  "SIM102",
  "SIM108",
  "UP007",  # I like Optional
  "ISC001", # May cause confict with formatter
]

[tool.ruff.lint.isort]
order-by-type = false
case-sensitive = true
combine-as-imports = true


[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ANN", "D"]


[tool.pyright]
include = ["src/**/*.py"]
venvPath = "."
venv = ".venv"

[tool.coverage.html]
directory = "documentation/static/htmlcov"
